--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <img src="logo.jpg" alt="Логотип" class="logo">
+  </header>
   <h1>Привет! Это мой сайт</h1>
 </body>
 </html>
