--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.jpg" alt="Логотип" class="logo">
+    <img src="logo.png" alt="Логотип" class="logo">
   </header>
   <h1>Привет! Это мой сайт</h1>
 </body>
