--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Мой сайт</title>
+  <title>IZIDEX</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="logo.png" alt="Логотип" class="logo">
   </header>
-  <h1>Привет! Это мой сайт</h1>
+  <h1>IZIDEX</h1>
 </body>
 </html>
