--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <header>
     <img src="logo.png" alt="Логотип" class="logo">
   </header>
-  <h1>     IZIDEX</h1>
+  <h1>.     IZIDEX</h1>
 </body>
 </html>
