--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="sceletlogo.png" alt="Логотип" class="logo">
+    <img src="sceletlogo1.png" alt="Логотип" class="logo">
   </header>
   <h1>IIIIIIIIZIDEX</h1>
 </body>
