--- a/index.html
+++ b/index.html
@@ -2,13 +2,155 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>    IZIDEX</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Izidex</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url("background.jpg") no-repeat center center fixed;
+      background-size: cover;
+      color: #00ff88;
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      padding: 10px 20px;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(10px);
+    }
+
+    header img {
+      height: 40px;
+      margin-right: 15px;
+    }
+
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #00ff88;
+      font-weight: bold;
+    }
+
+    .container {
+      padding: 30px;
+    }
+
+    .glass {
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 15px;
+      padding: 20px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 15px rgba(0, 255, 136, 0.2);
+    }
+
+    /* Калькулятор */
+    #calculator {
+      display: none;
+    }
+
+    .calc {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .calc button {
+      padding: 20px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      background: rgba(0, 255, 136, 0.2);
+      color: #00ff88;
+      cursor: pointer;
+      backdrop-filter: blur(6px);
+    }
+
+    .calc button:hover {
+      background: rgba(0, 255, 136, 0.4);
+    }
+
+    #result {
+      width: 100%;
+      padding: 15px;
+      font-size: 22px;
+      text-align: right;
+      border-radius: 10px;
+      border: none;
+      background: rgba(0, 0, 0, 0.6);
+      color: #00ff88;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <img src="sceletlogo1.png" alt="Логотип" class="logo">
+    <img src="sceletlogo1.png" alt="Izidex logo">
+    <nav>
+      <a href="#" onclick="showPage('home')">Главная</a>
+      <a href="#" onclick="showPage('calculator')">Калькулятор</a>
+    </nav>
   </header>
-  <h1>IIIIIIIIZIDEX</h1>
+
+  <div class="container">
+    <div id="home" class="glass">
+      <h1>Добро пожаловать в Izidex</h1>
+      <p>Современная платформа с технологичным подходом.</p>
+    </div>
+
+    <div id="calculator" class="glass">
+      <h2>Калькулятор</h2>
+      <input type="text" id="result" disabled>
+      <div class="calc">
+        <button onclick="append('7')">7</button>
+        <button onclick="append('8')">8</button>
+        <button onclick="append('9')">9</button>
+        <button onclick="append('/')">÷</button>
+
+        <button onclick="append('4')">4</button>
+        <button onclick="append('5')">5</button>
+        <button onclick="append('6')">6</button>
+        <button onclick="append('*')">×</button>
+
+        <button onclick="append('1')">1</button>
+        <button onclick="append('2')">2</button>
+        <button onclick="append('3')">3</button>
+        <button onclick="append('-')">−</button>
+
+        <button onclick="append('0')">0</button>
+        <button onclick="append('.')">.</button>
+        <button onclick="calculate()">=</button>
+        <button onclick="append('+')">+</button>
+
+        <button onclick="clearResult()" style="grid-column: span 4; background: rgba(255,0,0,0.3)">C</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function showPage(id) {
+      document.getElementById("home").style.display = "none";
+      document.getElementById("calculator").style.display = "none";
+      document.getElementById(id).style.display = "block";
+    }
+
+    function append(val) {
+      document.getElementById("result").value += val;
+    }
+
+    function calculate() {
+      try {
+        document.getElementById("result").value = eval(document.getElementById("result").value);
+      } catch {
+        document.getElementById("result").value = "Ошибка";
+      }
+    }
+
+    function clearResult() {
+      document.getElementById("result").value = "";
+    }
+
+    showPage("home");
+  </script>
 </body>
 </html>
