--- a/index.html
+++ b/index.html
@@ -2,84 +2,100 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Izidex</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("background.jpg") no-repeat center center fixed;
+      background: url('your-background.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: #00ff88;
+      color: white;
     }
-
     header {
-      display: flex;
-      align-items: center;
-      padding: 10px 20px;
-      background: rgba(0, 0, 0, 0.6);
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(15px);
+      background: rgba(0, 40, 0, 0.6);
+      padding: 15px;
+      text-align: center;
     }
-
     header img {
-      height: 40px;
-      margin-right: 15px;
+      max-width: 120px;
     }
-
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 10px;
+    }
     nav a {
-      margin: 0 10px;
       text-decoration: none;
-      color: #00ff88;
-      font-weight: bold;
+      color: white;
+      background: rgba(0, 100, 0, 0.6);
+      padding: 10px 15px;
+      border-radius: 12px;
+      transition: 0.3s;
     }
-
-    .container {
-      padding: 30px;
+    nav a:hover {
+      background: rgba(0, 200, 0, 0.7);
     }
-
-    .glass {
-      background: rgba(0, 0, 0, 0.5);
-      border-radius: 15px;
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 20px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 15px rgba(0, 255, 136, 0.2);
+      min-height: calc(100vh - 150px);
     }
-
-    /* Калькулятор */
-    #calculator {
-      display: none;
+    .card {
+      backdrop-filter: blur(20px);
+      background: rgba(0, 40, 0, 0.7);
+      padding: 20px;
+      border-radius: 20px;
+      max-width: 500px;
+      width: 100%;
     }
-
-    .calc {
+    /* калькулятор */
+    .calculator {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 10px;
-      margin-top: 20px;
     }
-
-    .calc button {
+    .calculator input {
+      grid-column: span 4;
+      padding: 15px;
+      font-size: 20px;
+      text-align: right;
+      border-radius: 10px;
+      border: none;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+    }
+    .calculator button {
       padding: 20px;
       font-size: 18px;
       border: none;
       border-radius: 10px;
-      background: rgba(0, 255, 136, 0.2);
-      color: #00ff88;
-      cursor: pointer;
-      backdrop-filter: blur(6px);
+      background: rgba(0, 200, 0, 0.5);
+      color: white;
+      transition: 0.3s;
+    }
+    .calculator button:hover {
+      background: rgba(0, 255, 0, 0.7);
     }
 
-    .calc button:hover {
-      background: rgba(0, 255, 136, 0.4);
-    }
-
-    #result {
-      width: 100%;
-      padding: 15px;
-      font-size: 22px;
-      text-align: right;
-      border-radius: 10px;
-      border: none;
-      background: rgba(0, 0, 0, 0.6);
-      color: #00ff88;
+    /* адаптивность */
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      .calculator button {
+        padding: 15px;
+        font-size: 16px;
+      }
+      header img {
+        max-width: 90px;
+      }
     }
   </style>
 </head>
@@ -87,70 +103,47 @@
   <header>
     <img src="sceletlogo1.png" alt="Izidex logo">
     <nav>
-      <a href="#" onclick="showPage('home')">Главная</a>
-      <a href="#" onclick="showPage('calculator')">Калькулятор</a>
+      <a href="#">Главная</a>
+      <a href="#">О нас</a>
+      <a href="#">Контакты</a>
+      <a href="#calc">Калькулятор</a>
     </nav>
   </header>
 
-  <div class="container">
-    <div id="home" class="glass">
-      <h1>Добро пожаловать в Izidex</h1>
-      <p>Современная платформа с технологичным подходом.</p>
-    </div>
-
-    <div id="calculator" class="glass">
+  <main>
+    <div class="card" id="calc">
       <h2>Калькулятор</h2>
-      <input type="text" id="result" disabled>
-      <div class="calc">
-        <button onclick="append('7')">7</button>
-        <button onclick="append('8')">8</button>
-        <button onclick="append('9')">9</button>
-        <button onclick="append('/')">÷</button>
-
-        <button onclick="append('4')">4</button>
-        <button onclick="append('5')">5</button>
-        <button onclick="append('6')">6</button>
-        <button onclick="append('*')">×</button>
-
-        <button onclick="append('1')">1</button>
-        <button onclick="append('2')">2</button>
-        <button onclick="append('3')">3</button>
-        <button onclick="append('-')">−</button>
-
-        <button onclick="append('0')">0</button>
-        <button onclick="append('.')">.</button>
+      <div class="calculator">
+        <input type="text" id="display" disabled>
+        <button onclick="press('7')">7</button>
+        <button onclick="press('8')">8</button>
+        <button onclick="press('9')">9</button>
+        <button onclick="press('/')">÷</button>
+        <button onclick="press('4')">4</button>
+        <button onclick="press('5')">5</button>
+        <button onclick="press('6')">6</button>
+        <button onclick="press('*')">×</button>
+        <button onclick="press('1')">1</button>
+        <button onclick="press('2')">2</button>
+        <button onclick="press('3')">3</button>
+        <button onclick="press('-')">−</button>
+        <button onclick="press('0')">0</button>
+        <button onclick="press('.')">.</button>
         <button onclick="calculate()">=</button>
-        <button onclick="append('+')">+</button>
-
-        <button onclick="clearResult()" style="grid-column: span 4; background: rgba(255,0,0,0.3)">C</button>
+        <button onclick="press('+')">+</button>
+        <button onclick="clearDisplay()" style="grid-column: span 4; background: rgba(200,0,0,0.5)">C</button>
       </div>
     </div>
-  </div>
+  </main>
 
   <script>
-    function showPage(id) {
-      document.getElementById("home").style.display = "none";
-      document.getElementById("calculator").style.display = "none";
-      document.getElementById(id).style.display = "block";
-    }
-
-    function append(val) {
-      document.getElementById("result").value += val;
-    }
-
+    const display = document.getElementById('display');
+    function press(value) { display.value += value; }
     function calculate() {
-      try {
-        document.getElementById("result").value = eval(document.getElementById("result").value);
-      } catch {
-        document.getElementById("result").value = "Ошибка";
-      }
+      try { display.value = eval(display.value); }
+      catch { display.value = 'Ошибка'; }
     }
-
-    function clearResult() {
-      document.getElementById("result").value = "";
-    }
-
-    showPage("home");
+    function clearDisplay() { display.value = ''; }
   </script>
 </body>
 </html>
